<resources>
    <string name="app_name">BentaBasura</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="fullname">Fullname</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="email">Email Address</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="takephoto">Take Photo</string>
    <string name="upload">Gallery</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="cpass">Confirm Password</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="prevNews">Previous</string>
    <string name="nextNews">Next</string>
    <string name="search_hint">Search</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_profile">My Profile</string>
    <string name="title_activity_buycrafted">Buy Crafted Items</string>
    <string name="title_activity_buyraw">Buy Raw Items</string>
    <string name="title_activity_sellcrafted">Sell Crafted Items</string>
    <string name="title_activity_sellraw">Sell Raw Items</string>
    <string name="title_activity_history">Bought Items</string>
    <string name="title_activity_notifications">Notifications</string>
    <string name="title_activity_cart">Cart</string>
    <string name="title_Categories">Categories</string>

    <string name="namelbl">Name:</string>
    <string name="emaillbl">Email:</string>
    <string name="genderlbl">Gender:</string>
    <string name="utypelbl">User Type:</string>
    <string name="updateBtn">Update</string>
    <string name="MobileNum">Mobile Number</string>
    <string name="Address">Address</string>

    <string name="craftName">Craft Name</string>
    <string name="craftDesc">Description</string>
    <string name="craftQuantity">Quantity</string>
    <string name="craftPrice">Price per item</string>
    <string name="craftCategory">Category</string>
    <string name="trashName">Trash Name</string>
    <string name="trashDesc">Description</string>
    <string name="trashQuantity">Weight in Kg/s</string>
    <string name="trashPrice">Price per kg</string>
    <string name="trashCategory">Category</string>
    <string name="resourcesFrom">Url for tutorials...</string>
    <string name="sellerContact">Meetup Location...</string>
    <string name="Submit">Submit</string>
    <string name="link_register">Register Here</string>
    <string name="GoogleSign">Login with Google</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="DescLabel">Description:</string>
    <string name="QtyLabel">Quantity:</string>
    <string name="CatLabel">Category:</string>
    <string name="PriceLabel">Price:</string>
    <string name="AboutSellerLabel">About Seller:</string>
    <string name="Category">Category</string>
    <string name="Filter">Filter</string>
    <string-array name="trash_category_array">
        <item>Plastic</item>
        <item>Paper</item>
        <item>Metal</item>
        <item>Wood</item>
    </string-array>
    <string-array name="craft_category_array">
        <item>Decoration</item>
        <item>Furniture</item>
        <item>Projects</item>
        <item>Accessories</item>
    </string-array>
    <string-array name="filter_array">
        <item>Quantity</item>
        <item>Name</item>
    </string-array>
    <string name="action_settings">Settings</string>
    <string name="title_activity_item__details">Item_Details</string>
    <string name="section_format">%1$d</string>
    <string name="title_activity_item_tab">item_tab</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_intro_skip">Skip</string>
</resources>
