<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editfname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/firstname" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:layout_below="@+id/editlname"
        android:layout_alignLeft="@+id/editlname"
        android:layout_alignStart="@+id/editlname" />

    <Button
        android:id="@+id/updatebtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/updateBtn"
        android:layout_below="@+id/editEmail"
        android:layout_alignRight="@+id/editEmail"
        android:layout_alignEnd="@+id/editEmail"
        android:layout_marginRight="25dp"
        android:layout_marginEnd="25dp" />

    <EditText
        android:id="@+id/editlname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/editfname"
        android:layout_alignRight="@+id/editfname"
        android:layout_below="@+id/editfname"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/lastname" />
</RelativeLayout>
