<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.bentabasura.benta_basura.SellRaw"
    android:background="@color/colorBackground2"
    android:orientation="vertical"
    >

    <android.support.design.widget.AppBarLayout
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:id="@+id/appBarLayout"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ImageView
        android:id="@+id/UploadImageView"
        android:layout_width="140dp"
        android:layout_height="150dp"
        app:srcCompat="@drawable/common_google_signin_btn_icon_dark_focused"
        tools:layout_editor_absoluteX="132dp"
        tools:layout_editor_absoluteY="56dp"
        android:layout_below="@+id/appBarLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/uploadbtn"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:text="@string/upload"
        tools:layout_editor_absoluteX="252dp"
        tools:layout_editor_absoluteY="56dp"
        android:layout_below="@+id/appBarLayout"
        android:layout_toRightOf="@+id/UploadImageView"
        android:layout_toEndOf="@+id/UploadImageView"
        android:layout_marginTop="7dp" />

    <Button
        android:id="@+id/takePhotobtn"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:text="@string/takephoto"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="56dp"
        android:layout_alignTop="@+id/uploadbtn"
        android:layout_toRightOf="@+id/uploadbtn"
        android:layout_toEndOf="@+id/uploadbtn" />

    <EditText
        android:id="@+id/trashName"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:background="@drawable/bg_btn"
        android:ems="10"
        android:hint="@string/trashName"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="63dp"
        tools:layout_editor_absoluteY="156dp"
        android:layout_above="@+id/trashQty"
        android:layout_toRightOf="@+id/UploadImageView"
        android:layout_toEndOf="@+id/UploadImageView"
        android:layout_marginBottom="11dp" />

    <EditText
        android:id="@+id/trashQty"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:background="@drawable/bg_btn"
        android:ems="10"
        android:hint="@string/trashQuantity"
        android:inputType="number"
        tools:layout_editor_absoluteX="63dp"
        tools:layout_editor_absoluteY="224dp"
        android:layout_alignBottom="@+id/UploadImageView"
        android:layout_alignLeft="@+id/trashName"
        android:layout_alignStart="@+id/trashName" />

    <EditText
        android:id="@+id/trashDesc"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_alignLeft="@+id/trashQty"
        android:layout_alignStart="@+id/trashQty"
        android:layout_below="@+id/trashQty"
        android:layout_marginTop="11dp"
        android:background="@drawable/bg_btn"
        android:ems="10"
        android:hint="@string/trashDesc"
        android:inputType="textMultiLine"
        tools:layout_editor_absoluteX="63dp"
        tools:layout_editor_absoluteY="292dp" />

    <EditText
        android:id="@+id/trashPrice"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:background="@drawable/bg_btn"
        android:ems="10"
        android:hint="@string/trashPrice"
        android:inputType="number"
        tools:layout_editor_absoluteX="63dp"
        tools:layout_editor_absoluteY="360dp"
        android:layout_below="@+id/trashDesc"
        android:layout_alignLeft="@+id/trashDesc"
        android:layout_alignStart="@+id/trashDesc"
        android:layout_marginTop="13dp" />

    <Button
        android:id="@+id/Submittrash"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/Submit"
        tools:layout_editor_absoluteX="134dp"
        tools:layout_editor_absoluteY="497dp"
        android:layout_below="@+id/sellerContact"
        android:layout_alignRight="@+id/uploadbtn"
        android:layout_alignEnd="@+id/uploadbtn"
        android:layout_marginRight="11dp"
        android:layout_marginEnd="11dp"
        android:layout_marginTop="31dp" />

    <EditText
        android:id="@+id/trashCategory"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:background="@drawable/bg_btn"
        android:ems="10"
        android:hint="@string/trashCategory"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="63dp"
        tools:layout_editor_absoluteY="428dp"
        android:layout_below="@+id/trashPrice"
        android:layout_alignLeft="@+id/trashPrice"
        android:layout_alignStart="@+id/trashPrice"
        android:layout_marginTop="8dp" />

    <EditText
        android:id="@+id/sellerContact"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginTop="11dp"
        android:background="@drawable/bg_btn"
        android:ems="10"
        android:hint="@string/sellerContact"
        android:inputType="textMultiLine"
        tools:layout_editor_absoluteX="63dp"
        tools:layout_editor_absoluteY="428dp"
        android:layout_below="@+id/trashCategory"
        android:layout_alignLeft="@+id/trashCategory"
        android:layout_alignStart="@+id/trashCategory" />
</RelativeLayout>
