<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_bentabasura2"
    >

    <EditText
        android:id="@+id/txtUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:background="@drawable/bg_fillup"
        android:paddingLeft="55dp"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="0dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/emailtxt"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="-34dp" />

    <EditText
        android:id="@+id/txtCPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:background="@drawable/bg_password"
        android:paddingLeft="55dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/emailtxt"
        android:layout_marginTop="-42dp"
        app:layout_constraintTop_toBottomOf="@+id/emailtxt"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/emailtxt"
        app:layout_constraintHorizontal_bias="1.0" />
    <EditText
        android:id="@+id/txtPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/cpass"
        android:inputType="textPassword"
        android:background="@drawable/bg_password"
        android:paddingLeft="55dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/emailtxt"
        android:layout_marginTop="68dp"
        app:layout_constraintTop_toBottomOf="@+id/emailtxt"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/emailtxt"
        app:layout_constraintHorizontal_bias="1.0" />

    <EditText
        android:id="@+id/txtFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/firstname"
        android:background="@drawable/bg_fillup"
        android:paddingLeft="55dp"
        android:inputType="textPersonName"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/txtPass"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/txtPass"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/txtPass"
        app:layout_constraintHorizontal_bias="0.186" />

    <EditText
        android:id="@+id/txtLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/lastname"
        android:background="@drawable/bg_fillup"
        android:paddingLeft="55dp"
        android:inputType="textPersonName"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/txtFirstName"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/txtFirstName"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/txtFirstName"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_btn"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/emailtxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:background="@drawable/bg_username"
        android:paddingLeft="55dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="-17dp"
        app:layout_constraintTop_toBottomOf="@+id/txtUser"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <RadioGroup
        android:id="@+id/RadioGroup1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="73dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLastName"
        tools:layout_constraintLeft_creator="1">

        <RadioButton
            android:id="@+id/malebtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            tools:layout_editor_absoluteX="73dp"
            tools:layout_editor_absoluteY="337dp" />

        <RadioButton
            android:id="@+id/femalebtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            tools:layout_editor_absoluteX="73dp"
            tools:layout_editor_absoluteY="294dp" />
    </RadioGroup>

    <Button
        android:id="@+id/backbtn"
        android:layout_width="39dp"
        android:layout_height="29dp"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/txtUser"
        android:background="@drawable/bg_back"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="0dp"
        android:layout_marginRight="266dp" />

</android.support.constraint.ConstraintLayout>
