<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.bentabasura.benta_basura.SellCrafted"
    android:background="@color/colorBackground2"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:id="@+id/appBarLayout"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ImageView
        android:id="@+id/UploadImageView"
        android:layout_width="140dp"
        android:layout_height="140dp"
        app:srcCompat="@drawable/common_google_signin_btn_icon_dark_focused"
        tools:layout_editor_absoluteX="132dp"
        tools:layout_editor_absoluteY="56dp"
        android:layout_alignTop="@+id/uploadbtn"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="5dp"/>

    <Button
        android:id="@+id/uploadbtn"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginTop="52dp"
        android:text="@string/upload"
        tools:layout_editor_absoluteX="252dp"
        tools:layout_editor_absoluteY="56dp"
        android:layout_below="@+id/appBarLayout"
        android:layout_alignStart="@+id/SubmitCraft" />

    <Button
        android:id="@+id/takePhotobtn"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:text="@string/takephoto"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="56dp"
        android:layout_above="@+id/craftName"
        android:layout_toRightOf="@+id/uploadbtn"
        android:layout_toEndOf="@+id/uploadbtn" />

    <EditText
        android:id="@+id/craftName"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:background="@drawable/bg_btn"
        android:paddingLeft="5dp"
        android:ems="10"
        android:hint="@string/craftName"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="63dp"
        tools:layout_editor_absoluteY="156dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="5dp"
        android:layout_below="@+id/uploadbtn"
        android:layout_toRightOf="@+id/UploadImageView"
        android:layout_toEndOf="@+id/UploadImageView" />

    <EditText
        android:id="@+id/craftQty"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_below="@+id/craftName"
        android:layout_marginTop="7dp"
        android:layout_marginLeft="5dp"
        android:layout_toEndOf="@+id/UploadImageView"
        android:layout_toRightOf="@+id/UploadImageView"
        android:background="@drawable/bg_btn"
        android:paddingLeft="5dp"
        android:ems="10"
        android:hint="@string/craftQuantity"
        android:inputType="number"
        tools:layout_editor_absoluteX="63dp"
        tools:layout_editor_absoluteY="224dp" />

    <EditText
        android:id="@+id/craftDesc"
        android:layout_width="170dp"
        android:layout_height="100dp"
        android:background="@drawable/bg_btn"
        android:paddingLeft="5dp"
        android:ems="10"
        android:hint="@string/craftDesc"
        android:inputType="textMultiLine"
        tools:layout_editor_absoluteX="63dp"
        tools:layout_editor_absoluteY="292dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/UploadImageView"
        android:layout_alignStart="@+id/UploadImageView" />

    <EditText
        android:id="@+id/craftPrice"
        android:layout_width="170dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_btn"
        android:paddingLeft="5dp"
        android:ems="10"
        android:hint="@string/craftPrice"
        android:inputType="number"
        tools:layout_editor_absoluteX="63dp"
        tools:layout_editor_absoluteY="360dp"
        android:layout_below="@+id/craftDesc"
        android:layout_alignEnd="@+id/sellerContact" />

    <Button
        android:id="@+id/SubmitCraft"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/Submit"
        tools:layout_editor_absoluteX="134dp"
        tools:layout_editor_absoluteY="497dp"
        android:layout_marginRight="21dp"
        android:layout_below="@+id/resourcesFrom"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp" />

    <EditText
        android:id="@+id/sellerContact"
        android:layout_width="170dp"
        android:layout_height="100dp"
        android:background="@drawable/bg_btn"
        android:paddingLeft="5dp"
        android:ems="10"
        android:hint="@string/sellerContact"
        android:inputType="textMultiLine"
        tools:layout_editor_absoluteX="63dp"
        tools:layout_editor_absoluteY="428dp"
        android:layout_above="@+id/craftPrice"
        android:layout_alignEnd="@+id/craftQty" />

    <EditText
        android:id="@+id/resourcesFrom"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:background="@drawable/bg_btn"
        android:paddingLeft="5dp"
        android:ems="10"
        android:hint="@string/resourcesFrom"
        android:inputType="textPersonName"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="58dp"
        android:layout_below="@+id/craftPrice"
        android:layout_alignEnd="@+id/takePhotobtn" />

    <Spinner
        android:id="@+id/spnCraftCategory"
        android:layout_width="170dp"
        android:layout_height="30dp"
        android:layout_alignTop="@+id/craftPrice"
        android:layout_alignStart="@+id/craftDesc" />

    <Button
        android:id="@+id/editbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Edit"
        android:layout_above="@+id/UploadImageView"
        android:layout_alignStart="@+id/resourcesFrom" />

    <Button
        android:id="@+id/deletebtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/resourcesFrom"
        android:layout_below="@+id/appBarLayout"
        android:text="Delete" />

</RelativeLayout>
